--- a/.gitignore
+++ b/.gitignore
@@ -138,8 +138,8 @@ dmypy.json
 cython_debug/
 
 # Corpus files
-/mind_corpus/corpus*/fact
-/mind_corpus/corpus*/opinion
-/mind_corpus/corpus*/entertainment
-/mind_corpus/corpus*/satire
-/mind_corpus/corpus*/conspiracy
+/mint_corpus/corpus*/fact
+/mint_corpus/corpus*/opinion
+/mint_corpus/corpus*/entertainment
+/mint_corpus/corpus*/satire
+/mint_corpus/corpus*/conspiracy
